--- a/css/main.css
+++ b/css/main.css
@@ -207,3 +207,8 @@
 .highlight {
   background-color: #f8f8f8;
 }
+
+nav ul, footer ul { font-size: 1em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: bold; }
+nav ul li, footer ul li { display: inline; margin-right: 20px; }
+
+footer { border-top: 1px solid #d5d5d5; font-size: .8em; }
