--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,9 @@
   background-color: #f8f8f8;
 }
 
+a { text-decoration: none; color: #999; }
+a:hover { text-decoration: underline; }
+
 nav ul, footer ul { font-size: 1em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: bold; }
 nav ul li, footer ul li { display: inline; margin-right: 20px; }
 
